# ceph

src/erasure-code/: CMakeLists.txt
src/erasure-code/sizeceph_actual/: CMakeLists.txt  ErasureCodePluginSizeCephActual.cc  ErasureCodeSizeCephActual.cc  ErasureCodeSizeCephActual.h  README.md
src/osd/: ECCommonL.cc
